@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Mention installdeps command in CONTRIBUTING.md
 
 0.033     2017-07-05 17:22:42 EDT
   - Add perl 5.26 to travis config in minting profile
